--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: yahuiwong/drone-sonar-dotnet-plugin:$(date +%s)
+          tags: yahuiwong/drone-sonar-dotnet-plugin:master-${{ steps.commit.outputs.short }}
 
