--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - id: commit
+        uses: pr-mpt/actions-commit-hash@v1
       -
         name: Checkout
         uses: actions/checkout@v2
