--- a/.github/workflows/docker-tags.yml
+++ b/.github/workflows/docker-tags.yml
@@ -28,9 +28,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
+        name: Tags Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: yahuiwong/drone-sonar-dotnet-plugin:${{steps.tag.outputs.tag}
+      -
+        name: latest Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: yahuiwong/drone-sonar-dotnet-plugin:latest
