--- a/.github/workflows/docker-tags.yml
+++ b/.github/workflows/docker-tags.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: yahuiwong/drone-sonar-dotnet-plugin:${{steps.tag.outputs.tag}
+          tags: yahuiwong/drone-sonar-dotnet-plugin:${{steps.tag.outputs.tag}}
       -
         name: latest Build and push
         uses: docker/build-push-action@v2
